# mnn-llm-server

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
scripts/: build-linux.sh  build-termux.sh  build.sh  install-deps.sh  model-download.sh  start.sh
src/: CMakeLists.txt  main.cpp
web/: index.html
